--- a/app/views/layouts/nav/_dashboard.html.erb
+++ b/app/views/layouts/nav/_dashboard.html.erb
@@ -1,11 +1,19 @@
-<nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap" id="dashboard">
-      <%= link_to "Home", root_path, class:"nav-link text-white p-2" %>
-      <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
-      <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
-          <%= link_to "Log out", destroy_account_session_path, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class:"nav-link" %>
-        </li>
-      </ul>
-    </nav>
-
-        
+<nav
+  class="navbar navbar-dark sticky-top p-2 bg-dark flex-md-nowrap"
+  id="dashboard"
+>
+  <%= link_to "Home", root_path, class:"nav-link text-white p-2" %>
+  <input
+    class="form-control form-control-dark w-100"
+    type="text"
+    placeholder="Search"
+    aria-label="Search"
+  />
+  <ul class="navbar-nav px-3">
+    <li class="nav-item text-nowrap">
+      <%= link_to "Log out", destroy_account_session_path, data: { turbo_method:
+      :delete, turbo_confirm: "Are you sure?" }, class:"nav-link btn btn-danger
+      text-white p-1" %>
+    </li>
+  </ul>
+</nav>
