--- a/app/views/layouts/nav/_public.html.erb
+++ b/app/views/layouts/nav/_public.html.erb
@@ -45,11 +45,8 @@
       </li>
       <% if account_signed_in? %> <%= link_to "Log out",
       destroy_account_session_path, data: { turbo_method: :delete,
-      turbo_confirm: "Are you sure?" }, class:"nav-link" %>
-      <li class="nav-item">
-        <%= link_to "Log in", new_account_session_path, class:"nav-link" %>
-      </li>
-      <% else %>
+      turbo_confirm: "Are you sure?" }, class:"nav-link btn btn-danger
+      text-white" %> <% else %>
       <li class="nav-item">
         <%= link_to "Sign up", new_account_registration_path, class:"nav-link"
         %>
