--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,19 +3,22 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name),
 html: { method: :put }) do |f| %> <%= devise_error_messages! %>
 
-<div class="form-group">
-  <%= f.label :avatar %>
-  <%= f.file_field :avatar %>
+<div class="form-group"><%= f.label :avatar %> <%= f.file_field :avatar %></div>
+
+<div class="form-outline mb-4">
+  <%= f.label :first_name %> <br />
+  <%= f.text_field :first_name, autofocus: true, class:"form-control",
+  class:"form-control" %>
 </div>
 
 <div class="form-outline mb-4">
-  <%= f.label :first_name %> <br>
-  <%= f.text_field :first_name, autofocus: true, class:"form-control", class:"form-control" %>
-</div>
-
-<div class="form-outline mb-4">
-  <%= f.label :last_name %> <br>
+  <%= f.label :last_name %> <br />
   <%= f.text_field :last_name, autofocus: true, class:"form-control"%>
+</div>
+
+<div class="form-outline mb-4">
+  <%= f.label :phone %> <br />
+  <%= f.text_field :phone, autofocus: true, class:"form-control"%>
 </div>
 
 <div class="form-group">
@@ -25,7 +28,8 @@ html: { method: :put }) do |f| %> <%= devise_error_messages! %>
 
 <div class="form-group">
   <%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control" %>
+  <%= f.email_field :email, autofocus: true, autocomplete: "email",
+  class:"form-control" %>
 </div>
 
 <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -35,8 +39,8 @@ html: { method: :put }) do |f| %> <%= devise_error_messages! %>
 <div class="form-group">
   <%= f.label :password %> <i>(leave blank if you don't want to change it)</i
   ><br />
-  <%= f.password_field :password, autocomplete: "new-password", class:"form-control" %> <% if
-  @minimum_password_length %>
+  <%= f.password_field :password, autocomplete: "new-password",
+  class:"form-control" %> <% if @minimum_password_length %>
   <br />
   <em><%= @minimum_password_length %> characters minimum</em>
   <% end %>
@@ -44,13 +48,15 @@ html: { method: :put }) do |f| %> <%= devise_error_messages! %>
 
 <div class="field">
   <%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
+  <%= f.password_field :password_confirmation, autocomplete: "new-password",
+  class:"form-control" %>
 </div>
 
 <div class="field">
   <%= f.label :current_password %>
   <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password, autocomplete: "current-password", class:"form-control" %>
+  <%= f.password_field :current_password, autocomplete: "current-password",
+  class:"form-control" %>
 </div>
 
 <div class="actions"><%= f.submit "Update", class:"btn btn-success" %></div>
