--- a/app/views/layouts/nav/_dashboard.html.erb
+++ b/app/views/layouts/nav/_dashboard.html.erb
@@ -11,9 +11,8 @@
   />
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
-      <%= link_to "Log out", destroy_account_session_path, data: { turbo_method:
-      :delete, turbo_confirm: "Are you sure?" }, class:"nav-link btn btn-danger
-      text-white p-1" %>
+      <%= button_to 'Sign Out', destroy_account_session_path, method: :delete,
+      class:"nav-link btn btn-danger text-white"%>
     </li>
   </ul>
 </nav>
