--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,6 +21,11 @@ html: { method: :put }) do |f| %> <%= devise_error_messages! %>
 </div>
 
 <div class="form-outline mb-4">
+  <%= f.label :details %> <br />
+  <%= f.text_field :details, autofocus: true, class:"form-control"%>
+</div>
+
+<div class="form-outline mb-4">
   <%= f.label :phone %> <br />
   <%= f.text_field :phone, autofocus: true, class:"form-control"%>
 </div>
