--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,11 @@
   </div>
 
   <div class="form-outline mb-4">
+    <%= f.label :details %> <br />
+    <%= f.text_field :details, autofocus: true, class:"form-control"%>
+  </div>
+
+  <div class="form-outline mb-4">
     <%= f.label :company %><br />
     <%= f.text_field :company, autofocus: true, class:"form-control" %>
   </div>
