--- a/app/views/properties/_property_list.erb
+++ b/app/views/properties/_property_list.erb
@@ -1,4 +1,4 @@
-<% @properties.each do |property| %>
+<% @properties.each do |property| unless property.status == "Sold" || property.status == "Rented" %>
 <div class="col-sm-4 border mb-2">
   <div class="property-latest-img" style="background-image: url(<%= property_image_url(property)%>)">
     <%= link_to "", property_path(property), class:"link-latest" %>
@@ -15,4 +15,5 @@
     </span class="mr-2">
   </div>
 </div>
+<% end %>
 <% end %>
