--- a/app/views/layouts/nav/_user.html.erb
+++ b/app/views/layouts/nav/_user.html.erb
@@ -1,11 +1,5 @@
 <ul class="nav flex-column">
   <li class="nav-item">
-    <a class="nav-link" href="#">
-      <span data-feather="users"></span>
-      Customers
-    </a>
-  </li>
-  <li class="nav-item">
     <%= link_to "Dashboard", dashboard_path, class:"nav-link" %>
   </li>
   <li class="nav-item">
@@ -20,15 +14,8 @@
     Account settings <% end %>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">
-      <span data-feather="layers"></span>
-      Viewing
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">
-      <span data-feather="layers"></span>
-      Settings
-    </a>
+    <%= link_to posts_path, class:"nav-link" do %>
+    <span data-feather="layers"></span>
+    Blog Post <% end %>
   </li>
 </ul>
