--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,35 +1,39 @@
 <div id="<%= dom_id post %>">
-  <p>
-    <strong>Title:</strong>
-    <%= post.title %>
-  </p>
+  <div class="d-flex justify-content-center w-2">
+    <img
+      class="profile-back"
+      src="<%= post_main(post)%>"
+      alt="Profile background"
+      style="width: auto; height: 52vh"
+    />
+  </div>
+<div class="container">
+  <div class="row">
+    <div class="col-7">
+      <h2 class="h2"><%= post.title %></h2>
+      <p class="h2">
+      </p>
 
-  <p>
-    <strong>Url:</strong>
-    <%= post.url %>
-  </p>
+      <div class="">
+        <div id="post-details">
+          <%= post.body %>
+        </div>
+      </div>
+    </div>
 
-  <p>
-    <strong>Summary:</strong>
-    <%= post.summary %>
-  </p>
+    <div class="col-sm-3 p-3 text-center">
+      <div class="row bg-light">
+        
+      </div>
+    </div>
 
-  <p>
-    <strong>Body:</strong>
-    <%= post.body %>
-  </p>
+    <div class="col-2"><%= render 'properties/agent_details' %></div>
+  </div>
 
-  <p>
-    <strong>Image:</strong>
-    <%= post.image.attached? %>
-  </p>
-
-  <p>
-    <strong>Account:</strong>
-    <%= post.account.first_name + " " + post.account.last_name %>
-  </p>
-
-  <div> 
-    <img src="<%= post_main(post) %>" alt="" width="500px">
+  <div class="container">
+    <% if @agent.properties.any?  %>
+      <div class="h4 mb-5">Properties by <%=@agent.first_name %></div>
+      <div class="row"><%= render 'properties/property_list'%></div>
+    <% end %>
   </div>
 </div>
